# cats-dogs-breeds-recognition

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  commands.py  config.yaml  data.dvc  docker-compose.yaml  pyproject.toml
breeds_breeds/: infer.py  model.py  test.py  train.py  trainer.py
